changed path img

--- a/HTML-CSS/Week01/index.html
+++ b/HTML-CSS/Week01/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./main.css">
     <title>Resume</title>
   </head>
   <body>
@@ -15,7 +15,7 @@
       <!-- left section -->
       <section class="left">
         <figure>
-          <img src="/img/cv.jpeg" alt="person">
+          <img src="./img/cv.jpeg" alt="person">
         </figure>
         <article class="contact">
           <h2>Contact</h2>
