--- a/HTML-CSS/Week01/index.html
+++ b/HTML-CSS/Week01/index.html
@@ -15,7 +15,7 @@
       <!-- left section -->
       <section class="left">
         <figure>
-          <img src="./img/cv.jpeg" alt="person">
+          <img src="./img/cv.jpeg" alt="Klaudia Wroblewska">
         </figure>
         <article class="contact">
           <h2>Contact</h2>
