--- a/HTML-CSS/Week01/index.html
+++ b/HTML-CSS/Week01/index.html
@@ -12,50 +12,49 @@
   </head>
   <body>
     <main>
-      <!-- left section -->
       <section class="left">
         <figure>
-          <img src="./img/cv.jpeg" alt="Klaudia Wroblewska">
+          <img src="/img/cv.jpeg" alt="person">
         </figure>
-        <article class="contact">
+        <div class="contact">
           <h2>Contact</h2>
-          <p>Phone: <br /> 070-657 7689 </p>
-          <p>Email: <br /> kkklibre@gmail.com </p>
-          <p>Linkedin: <br />
-            <a href="https://www.linkedin.com/in/klaudiawroblewska0410/" target="_blank" title="Linkedin">Linkedin</a>
-          <p>GitHub: <br />
-            <a href="https://github.com/klaudiaW0410" target="_blank" title="Linkedin">Linkedin</a>
-        </article>
-        <article class="education">
+          <p>Phone: <i>765 097 944 </i> </p>
+          <p>Email:<i>kkklibre@gmail.com </i></p>
+          <p>Linkedin:
+            <a href="https://www.linkedin.com/in/klaudiawroblewska0410/" target="_blank" title="Linkedin">Linkedin</a> </p>
+          <p>GitHub:
+            <a href="https://github.com/klaudiaW0410" target="_blank" title="Linkedin">GitHub </a></p> 
+        </div>
+        <div class="education">
           <h2>Education</h2>
-          <h4>Kazimierz Wielki University in Bydgoszcz / Poland <h4>
-              <p>2012-2016 <br /> master of engineering | safety engineering </p>
-              <p>2016-2017 <br /> master of science | education in technology and informatics </p>
-        </article>
-        <article class="skills">
+          <h3>Kazimierz Wielki University in Bydgoszcz / Poland</h3>
+          <p>2012-2016 - master of engineering | safety engineering</p>
+          <p>2016-2017 - master of science | education in technology and informatics</p>
+        </div>
+        <div class="skills">
           <h2>Skills</h2>
           <ul>
             <li>HTML</li>
             <li>CSS</li>
             <li>Hosting</li>
           </ul>
-        </article>
-        <article class="language">
+        </div>
+        <div class="language">
           <h2>Language</h2>
           <ul>
             <li>Polish - C2 - Proficient</li>
             <li>English - B1 - Intermediate</li>
             <li>Swedish - A1 - Beginner</li>
           </ul>
-        </article>
+        </div>
       </section>
-      <!-- right section -->
+      
       <section class="right">
-        <article class="about">
+        <div class="about">
           <h1>Klaudia Wróblewska</h1>
           <p>I have worked as a steel construction technologist after my university. Later, I decided to change my career as I want to be a web developer. Currently, I am studying online at SheCode for a frontend development course. In addition, I am doing a course on the freecodecamp website, which helps me improve my programming skills. After completing the course at SheCode, I plan to continue learning more about web and frontend technologies.</p>
-        </article>
-        <article class="experience">
+        </div>
+        <div class="experience">
           <h2>Work experience</h2>
           <h3>Nita Städ & Flytt AB | Eslöv Sweden</h3>
           <h4>10/2021 - 09/2022</h4>
@@ -66,8 +65,8 @@
           <h3>Ordipol Sp. z o. o. | Poznan Poland</h3>
           <h4>07/2017 - 07/2018</h4>
           <p> Sales assistant- physical work</p>
-        </article>
-        <article class="course">
+        </div>
+        <div class="course">
           <h2>Course</h2>
           <h3>SheCodes | Online</h3>
           <h4>08/2022 - 01/2023</h4>
@@ -75,8 +74,8 @@
           <h3>Foo Coding | Malmö</h3>
           <h4>02/2023 - present</h4>
           <p>Full-Stack Web Developement</p>
-        </article>
-        <article class="learning">
+        </div>
+        <div class="learning">
           <h2>Learning strategies</h2>
           <ul>
             <li>I have created a basic layout in HTML using semantic. I draw knowledge from <a href="https://www.w3schools.com/html/default.asp" target="_blank"> w3schools</a> and <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">MDN Web Docs.</a>
@@ -86,8 +85,8 @@
             <li>I used <a href="https://learncssgrid.com/" target="_blank">CSS grid Module</a> for design web page. </li>
             <li>I created a new repository on GitHub and pushed my code.</li>
           </ul>
-        </article>
-        <article class="coding">
+        </div>
+        <div class="coding">
           <h2>Foo Coding</h2>
           <ul>
             <li> Check the website <a href="https://www.foocoding.org/" target="_blank"> Foo Coding</a>
@@ -97,7 +96,7 @@
             <li>Let's meet at <a href="https://www.foocafe.org/events" target="_blank">events</a>
             </li>
           </ul>
-        </article>
+        </div>
       </section>
     </main>
   </body>
