--- a/HTML-CSS/Week01/index.html
+++ b/HTML-CSS/Week01/index.html
@@ -14,7 +14,7 @@
     <main>
       <section class="left">
         <figure>
-          <img src="/img/cv.jpeg" alt="person">
+          <img src="/img/cv.jpeg" alt="Klaudia Wroblewska">
         </figure>
         <div class="contact">
           <h2>Contact</h2>
