--- a/HTML-CSS/week03/index.html
+++ b/HTML-CSS/week03/index.html
@@ -1,1 +1,533 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./main.css">
+  <script src="https://kit.fontawesome.com/3317e7b26d.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+  <title>TNW | The heart of tech</title>
+</head>
+
+<body>
+
+  <!-- ***********navigation************ -->
+
+  <nav class="navigation">
+    <div class="first-nav">
+      <ul>
+        <li class="news"><a href="" title="">News</a></li>
+        <li> <a href="" title="">Events</a></li>
+        <li><a href="" title="">Spaces</a></li>
+        <li> <a href="" title="">Programs</a></li>
+      </ul>
+      <ul>
+        <li><a href="" title="">Newsletter</a></li>
+        <li><a href="" title="">Partner with us</a></li>
+        <li><a href="" title="">Search</a></li>
+      </ul>
+    </div>
+    <div class="second-nav">
+      <ul class="left-nav">
+        <img src="img/tnw.jpeg" class="logo" alt="Logo" />
+        <img src="img/flag.png" class="flag" alt="Flaga" />
+      </ul>
+      <ul class="right-nav">
+        <li><a href="" title="">Latest</a></li>
+        <li> <a href="" title="">Deep tech</a></li>
+        <li><a href="" title="">Sustainability</a></li>
+        <li> <a href="" title="">Ecosystems</a></li>
+        <li> <a href="" title="">Data and security</a></li>
+        <li><a href="" title="">Fintech and ecommerce</a></li>
+        <li><a href="" title="">Future of work</a></li>
+        <li><a href="" title="">More</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- ***********link************ -->
+
+  <div class="navMessage">
+    <a href="https://thenextweb.com/valencia?utm_source=TNW+Website&utm_medium=TNW+website+notification&utm_campaign=Cross+Site+Notification&utm_content=VLC+main+page"
+      target="_blank"><strong>Lessthan 5 weeks until TNW València</strong> 🇪🇸 Uncover all things tech in the heart of Spain<strong> →</strong></a>
+  </div>
+  </a>
+
+  <!-- ***********first-grid************ -->
+
+<main>
+  <section class="important-news">
+    <div class="first-grid">
+
+      <article class="sensor">
+        <div class="description">
+          <h6>Deep tech</h6>
+          <h4>New sensor promises to bring ‘true colour’ to smartphone photos</a></h4>
+        </div>
+      </article>
+      <article class="ukraine">
+        <div class="description">
+          <h6>Data and security</h6>
+          <h4>Ukraine’s year of war exposes changing roles for cyber weapons</h4>
+        </div>
+      </article>
+      <article class="join">
+        <div class="description">
+          <h2>TNW València's agenda is out now <span>Get inspired by 100+ speakers
+              through our future-proof themes</span></h2>
+          <button class="joinBtn">Join now</button>
+        </div>
+      </article>
+      <article class="valencia">
+        <div class="description">
+          <h6>Ecosystems</h6>
+          <h4>València’sfirst unicorn founder wants to build a global hub for impact tech</h4>
+        </div>
+      </article>
+      <article class="drones">
+        <div class="description">
+          <h6>Deep tech</h6>
+          <h4>Are bioinspired drones the next big thing in unmanned flight?</h4>
+        </div>
+      </article>
+    </div>
+  </section>
+
+  <!-- ***********second-grid************ -->
+
+  <section class="popular-story">
+    <div>
+      <h2 class="popular">Most popular stories today</h2>
+    </div>
+    <ul class="second-grid">
+      <li class="listItem">
+        <div class="clipImg">
+          <img src="/img/drones.jpg" class="second-img" alt="drones">
+          <div class="index">1</div>
+        </div>
+        <div class="description">
+          <h4>Are bioinspired drones the next big thing in unmanned flight?</h4>
+        </div>
+      </li>
+      <li class="listItem">
+        <div class="clipImg">
+          <img src="/img/valencia.jpg" class="second-img" alt="valencia">
+          <div class="index">2</div>
+        </div>
+        <div class="description">
+          <h4>
+            New sensor promises to bring ‘true colour’ to smartphone photos
+          </h4>
+        </div>
+      </li>
+      <li class="listItem">
+        <div class="clipImg">
+          <img src="/img/sensor.jpeg" class="second-img" alt="sensor">
+          <div class="index">3</div>
+        </div>
+        <div class="description">
+          <h4>
+            What the Mesopotamians can teach us about ChatGPT and the impact of new
+            tech
+          </h4>
+        </div>
+      </li>
+      <li class="listItem">
+        <div class="clipImg">
+          <img src="/img/ukrain.jpeg" class="second-img" alt="ukrain">
+          <div class="index">4</div>
+        </div>
+        <div class="description">
+          <h4>
+            Plan to build UK’s first battery gigafactory falls out of British hands
+          </h4>
+        </div>
+      </li>
+      <li class="listItem">
+        <div class="clipImg">
+          <img src="/img/drones.jpg" class="second-img" alt="drones">
+          <div class="index">5</div>
+        </div>
+        <div class="description">
+          <h4>
+            Why US-based unicorn HackerOne keeps their dev team in Groningen
+          </h4>
+        </div>
+      </li>
+    </ul>
+  </section>
+
+  <!-- ***********third-grid************ -->
+
+  <section class="latest-news">
+    <div>
+      <h2 class="latest">Latest news</h2>
+    </div>
+    <ul class="third-grid">
+      <li class="listItem">
+        <div class="showcaseLabel">
+          <img src="/img/valencia.jpg" alt="valencia">
+        </div>
+        <div class="description">
+          <h6>FUTURE OF WORK</h6>
+          <h4>Will non-linear work days be the new hybrid working?</h4>
+        </div>
+      </li>
+      <li class="listItem">
+        <div class="showcaseLabel">
+          <img src="/img/drones.jpg" alt="drones">
+        </div>
+        <div class="description">
+          <h6>FUTURE OF WORK</h6>
+          <h4>Will non-linear work days be the new hybrid working?</h4>
+        </div>
+      </li>
+
+      <li class="listItem">
+        <div class="showcaseLabel">
+          <img src="/img/ukrain.jpeg" alt="ukrain">
+        </div>
+        <div class="description">
+          <h6>FUTURE OF WORK</h6>
+          <h4>Will non-linear work days be the new hybrid working?</h4>
+        </div>
+      </li>
+
+      <li class="listItem">
+        <div class="showcaseLabel">
+          <img src="/img/sensor.jpeg" alt="sensor">
+        </div>
+        <div class="description">
+          <h6>FUTURE OF WORK</h6>
+          <h4>Will non-linear work days be the new hybrid working?</h4>
+        </div>
+      </li>
+
+      <li class="listItem">
+        <div class="showcaseLabel">
+          <img src="/img/sensor.jpeg" alt="sensor">
+        </div>
+        <div class="description">
+          <h6>FUTURE OF WORK</h6>
+          <h4>Will non-linear work days be the new hybrid working?</h4>
+        </div>
+      </li>
+
+      <li class="listItem">
+        <div class="showcaseLabel">
+          <img src="/img/drones.jpg" alt="drones">
+        </div>
+        <div class="description">
+          <h6>FUTURE OF WORK</h6>
+          <h4>Will non-linear work days be the new hybrid working?</h4>
+        </div>
+      </li>
+
+      <li class="listItem">
+        <div class="showcaseLabel">
+          <img src="/img/sensor.jpeg" alt="sensor">
+        </div>
+        <div class="description">
+          <h6>FUTURE OF WORK</h6>
+          <h4>Will non-linear work days be the new hybrid working?</h4>
+        </div>
+      </li>
+
+      <li class="listItem">
+        <div class="showcaseLabel">
+          <img src="/img/valencia.jpg" alt="valencia">
+        </div>
+        <div class="description">
+          <h6>FUTURE OF WORK</h6>
+          <h4>Will non-linear work days be the new hybrid working?</h4>
+        </div>
+      </li>
+
+      <li class="listItem">
+        <div class="showcaseLabel">
+          <img src="/img/ukrain.jpeg" alt="ukrain">
+        </div>
+        <div class="description">
+          <h6>FUTURE OF WORK</h6>
+          <h4>Will non-linear work days be the new hybrid working?</h4>
+        </div>
+      </li>
+
+      <li class="listItem">
+        <div class="showcaseLabel">
+          <img src="/img/sensor.jpeg" alt="sensor">
+        </div>
+        <div class="description">
+          <h6>FUTURE OF WORK</h6>
+          <h4>Will non-linear work days be the new hybrid working?</h4>
+        </div>
+      </li>
+
+      <li class="listItem">
+        <div class="showcaseLabel">
+          <img src="/img/drones.jpg" alt="drones">
+        </div>
+        <div class="description">
+          <h6>FUTURE OF WORK</h6>
+          <h4>Will non-linear work days be the new hybrid working?</h4>
+        </div>
+      </li>
+
+      <li class="listItem">
+        <div class="showcaseLabel">
+          <img src="/img/sensor.jpeg" alt="sensor">
+        </div>
+        <div class="description">
+          <h6>FUTURE OF WORK</h6>
+          <h4>Will non-linear work days be the new hybrid working?</h4>
+        </div>
+      </li>
+    </ul>
+  </section>
+
+  <button> See all latest news</button>
+  <section class="newsletter">
+    <div class="mail">
+      <h2>Get the TNW newsletter</h2>
+      <p>Getting to the heart of the European tech and startup scene.</p>
+      <form class="search-form">
+        <div class="form-email">
+          <input type="email" placeholder=" you@email.com" autocomplete="off"  class="email" />
+          <input type="submit" value="SUBSCRIBE" class="btn" />
+        </div>
+        <input type="checkbox"  name="agree" value="agree">
+        <label for="agree"> I agree to allow TNW to store and process my personal data*</label>
+      </form>
+    </div>
+    <div class="icon">
+      <i class="fa-brands fa-square-facebook"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-youtube"></i>
+      <i class="fa-brands fa-flipboard"></i>
+      <i class="fa-solid fa-envelope"></i>
+      <i class="fa-brands fa-linkedin"></i>
+    </div>
+  </section>
+
+  <!-- ********technology********* -->
+
+  <section class="showcase">
+    <div class="showcaseHeader">
+      <h2>Startups and technology</h2>
+    </div>
+    <div class="showcaseSubbrandsList">
+      <div class="showcaseSubbrandsArtical">
+        <img src="/img/drones.jpg" alt="drones">
+        <small>
+          <p>FUTURE OF WORK</p>
+        </small>
+        <h2>
+          Will non-linear work days be the new hybrid working?
+        </h2>
+        <p>Time to ditch the traditional 9 to 5</p>
+      </div>
+      <ol class="contentList">
+        <li class="listArticle">
+          <figure>
+            <img src="/img/join.webp" class="technology-img" alt="join">
+          </figure>
+          <div class="listArticleDescription">
+            <small>
+              <p class="title">DEEP TECH</p>
+            </small>
+            <p>New sensor promises to bring ‘true colour’ to smartphone photos</p>
+          </div>
+        </li>
+        <li class="listArticle">
+          <figure>
+            <img src="/img/sensor.jpeg" class="technology-img" alt="sensor">
+          </figure>
+          <div class="listArticleDescription">
+            <small>
+              <p class="title">DEEP TECH</p>
+            </small>
+            <p>New sensor promises to bring ‘true colour’ to smartphone photos</p>
+          </div>
+        </li>
+        <li class="listArticle">
+          <figure>
+            <img src="/img/ukrain.jpeg" class="technology-img" alt="ukrain">
+          </figure>
+          <div class="listArticleDescription">
+            <small>
+              <p class="title">DEEP TECH</p>
+            </small>
+            <p>New sensor promises to bring ‘true colour’ to smartphone photos</p>
+          </div>
+        </li>
+        <li class="listArticle">
+          <figure>
+            <img src="/img/valencia.jpg" class="technology-img" alt="valencia">
+          </figure>
+          <div class="listArticleDescription">
+            <small>
+              <p class="title">DEEP TECH</p>
+            </small>
+            <p>New sensor promises to bring ‘true colour’ to smartphone photos</p>
+          </div>
+        </li>
+      </ol>
+    </div>
+  </section>
+
+  <!-- ********video********* -->
+
+  <section class="video">
+    <div class="videoList">
+      <div class="videoArtical">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/N8tnM9KyLos?start=9"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+        <small>
+          <p>FUTURE OF WORK</p>
+        </small>
+        <h2>
+          Will non-linear work days be the new hybrid working?
+        </h2>
+        <p>Time to ditch the traditional 9 to 5</p>
+      </div>
+      <ol class="contentList">
+        <li class="listArticle">
+            <iframe class="youtube" width="180" height="100"src="https://www.youtube.com/embed/N8tnM9KyLos?start=9"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+          <div class="listArticleDescription">
+            <small>
+              <p class="title">DEEP TECH</p>
+            </small>
+            <p>New sensor promises to bring ‘true colour’ to smartphone photos</p>
+          </div>
+        </li>
+        <li class="listArticle">
+          <iframe class="youtube" width="180" height="100"src="https://www.youtube.com/embed/N8tnM9KyLos?start=9"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+          <div class="listArticleDescription">
+            <small>
+              <p class="title">DEEP TECH</p>
+            </small>
+            <p>New sensor promises to bring ‘true colour’ to smartphone photos</p>
+          </div>
+        </li>
+        <li class="listArticle">
+          <iframe class="youtube" width="180" height="100"src="https://www.youtube.com/embed/N8tnM9KyLos?start=9"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+          <div class="listArticleDescription">
+            <small>
+              <p class="title">DEEP TECH</p>
+            </small>
+            <p>New sensor promises to bring ‘true colour’ to smartphone photos</p>
+          </div>
+        </li>
+        <li class="listArticle">
+          <iframe  class="youtube" width="180" height="100"src="https://www.youtube.com/embed/N8tnM9KyLos?start=9"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+          <div class="listArticleDescription">
+            <small>
+              <p class="title">DEEP TECH</p>
+            </small>
+            <p>New sensor promises to bring ‘true colour’ to smartphone photos</p>
+          </div>
+        </li>
+      </ol>
+    </div>
+  </section>
+
+  <!-- ********get in touch********* -->
+  <section class="getInTouch">
+    <div class="videoList">
+      <div class="videoArtical">
+        <h2>Work with us</h2>
+        <p>TNW takes center stage in the tech industry, offering creative media campaigns, sizzling tech events, bespoke innovation programs, and prime office locations in Amsterdam. Want to engage your audience more effectively, innovate your business, and position your brand in front of a digital-savvy audience</p>
+        <button class="getInTouchButton">Get in touch</button>
+      </div>
+      <div class="getInTouchIcon">
+        <figure>
+          <img src="/img/media.svg" alt="media">
+        </figure>
+          <p> Media</p>
+    </div>
+    <div class="getInTouchIcon">
+      <figure>
+        <img src="/img/events.svg" alt="events">
+      </figure>
+        <p>Events</p>
+  </div>
+  <div class="getInTouchIcon">
+    <figure>
+      <img src="/img/spaces.svg" alt="spaces">
+    </figure>
+      <p>Spaces</p>
+
+</div>
+<div class="getInTouchIcon">
+  <figure>
+    <img src="/img/programs.svg" alt="programs">
+  </figure>
+    <p>Programs</p>
+
+</div>
+    </div>
+  </section>
+  </main>
+  <footer class="fourth-grid">
+    <div class="social-media">
+      <figure>
+        <img src="img/tnw.jpeg" class="socialLogo" alt="Logo" />
+      </figure>
+      <p>The heart of tech</p>
+      <i class="fa-brands fa-square-facebook"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-youtube"></i>
+      <i class="fa-brands fa-flipboard"></i>
+      <i class="fa-solid fa-envelope"></i>
+      <i class="fa-brands fa-linkedin"></i>
+    </div>
+    <div class="more">
+      <ul>
+        <h6>More TNW</h6>
+        <li> Media</li>
+        <li>Events</li>
+        <li> Programs</li>
+        <li>Spaces</li>
+        <li>Newsletter</li>
+        <li>Details</li>
+      </ul>
+    </div>
+    <div class="about">
+      <ul>
+        <h6>About TNW</h6>
+        <li> Partner with us</li>
+        <li>Jobs</li>
+        <li> Terms & Conditions</li>
+        <li>Cookie Statement</li>
+        <li>Privacy Statement</li>
+        <li>Editorial Policy</li>
+        <li>Masthead</li>
+      </ul>
+    </div>
+    <div  class="footer-copyright">
+      <h4> A Financial Times company</h4>
+      <p >Copyright © 2006—2023, The Next Web B.V. Made with &lt;3 in Amsterdam. </p>
+    </div>
+</footer>
+
+</body>
+
+</html>
