--- a/HTML-CSS/week03/index.html
+++ b/HTML-CSS/week03/index.html
@@ -104,7 +104,7 @@
     <ul class="second-grid">
       <li class="listItem">
         <div class="clipImg">
-          <img src="/img/drones.jpg" class="second-img" alt="drones">
+          <img src="img/drones.jpg" class="second-img" alt="drones">
           <div class="index">1</div>
         </div>
         <div class="description">
@@ -113,7 +113,7 @@
       </li>
       <li class="listItem">
         <div class="clipImg">
-          <img src="/img/valencia.jpg" class="second-img" alt="valencia">
+          <img src="img/valencia.jpg" class="second-img" alt="valencia">
           <div class="index">2</div>
         </div>
         <div class="description">
@@ -124,7 +124,7 @@
       </li>
       <li class="listItem">
         <div class="clipImg">
-          <img src="/img/sensor.jpeg" class="second-img" alt="sensor">
+          <img src="img/sensor.jpeg" class="second-img" alt="sensor">
           <div class="index">3</div>
         </div>
         <div class="description">
@@ -136,7 +136,7 @@
       </li>
       <li class="listItem">
         <div class="clipImg">
-          <img src="/img/ukrain.jpeg" class="second-img" alt="ukrain">
+          <img src="img/ukrain.jpeg" class="second-img" alt="ukrain">
           <div class="index">4</div>
         </div>
         <div class="description">
@@ -147,7 +147,7 @@
       </li>
       <li class="listItem">
         <div class="clipImg">
-          <img src="/img/drones.jpg" class="second-img" alt="drones">
+          <img src="img/drones.jpg" class="second-img" alt="drones">
           <div class="index">5</div>
         </div>
         <div class="description">
@@ -168,7 +168,7 @@
     <ul class="third-grid">
       <li class="listItem">
         <div class="showcaseLabel">
-          <img src="/img/valencia.jpg" alt="valencia">
+          <img src="img/valencia.jpg" alt="valencia">
         </div>
         <div class="description">
           <h6>FUTURE OF WORK</h6>
@@ -177,17 +177,7 @@
       </li>
       <li class="listItem">
         <div class="showcaseLabel">
-          <img src="/img/drones.jpg" alt="drones">
-        </div>
-        <div class="description">
-          <h6>FUTURE OF WORK</h6>
-          <h4>Will non-linear work days be the new hybrid working?</h4>
-        </div>
-      </li>
-
-      <li class="listItem">
-        <div class="showcaseLabel">
-          <img src="/img/ukrain.jpeg" alt="ukrain">
+          <img src="img/drones.jpg" alt="drones">
         </div>
         <div class="description">
           <h6>FUTURE OF WORK</h6>
@@ -197,7 +187,7 @@
 
       <li class="listItem">
         <div class="showcaseLabel">
-          <img src="/img/sensor.jpeg" alt="sensor">
+          <img src="img/ukrain.jpeg" alt="ukrain">
         </div>
         <div class="description">
           <h6>FUTURE OF WORK</h6>
@@ -207,7 +197,7 @@
 
       <li class="listItem">
         <div class="showcaseLabel">
-          <img src="/img/sensor.jpeg" alt="sensor">
+          <img src="img/sensor.jpeg" alt="sensor">
         </div>
         <div class="description">
           <h6>FUTURE OF WORK</h6>
@@ -217,7 +207,7 @@
 
       <li class="listItem">
         <div class="showcaseLabel">
-          <img src="/img/drones.jpg" alt="drones">
+          <img src="img/sensor.jpeg" alt="sensor">
         </div>
         <div class="description">
           <h6>FUTURE OF WORK</h6>
@@ -227,7 +217,7 @@
 
       <li class="listItem">
         <div class="showcaseLabel">
-          <img src="/img/sensor.jpeg" alt="sensor">
+          <img src="img/drones.jpg" alt="drones">
         </div>
         <div class="description">
           <h6>FUTURE OF WORK</h6>
@@ -237,7 +227,7 @@
 
       <li class="listItem">
         <div class="showcaseLabel">
-          <img src="/img/valencia.jpg" alt="valencia">
+          <img src="img/sensor.jpeg" alt="sensor">
         </div>
         <div class="description">
           <h6>FUTURE OF WORK</h6>
@@ -247,7 +237,7 @@
 
       <li class="listItem">
         <div class="showcaseLabel">
-          <img src="/img/ukrain.jpeg" alt="ukrain">
+          <img src="img/valencia.jpg" alt="valencia">
         </div>
         <div class="description">
           <h6>FUTURE OF WORK</h6>
@@ -257,7 +247,7 @@
 
       <li class="listItem">
         <div class="showcaseLabel">
-          <img src="/img/sensor.jpeg" alt="sensor">
+          <img src="img/ukrain.jpeg" alt="ukrain">
         </div>
         <div class="description">
           <h6>FUTURE OF WORK</h6>
@@ -267,7 +257,7 @@
 
       <li class="listItem">
         <div class="showcaseLabel">
-          <img src="/img/drones.jpg" alt="drones">
+          <img src="img/sensor.jpeg" alt="sensor">
         </div>
         <div class="description">
           <h6>FUTURE OF WORK</h6>
@@ -277,7 +267,17 @@
 
       <li class="listItem">
         <div class="showcaseLabel">
-          <img src="/img/sensor.jpeg" alt="sensor">
+          <img src="img/drones.jpg" alt="drones">
+        </div>
+        <div class="description">
+          <h6>FUTURE OF WORK</h6>
+          <h4>Will non-linear work days be the new hybrid working?</h4>
+        </div>
+      </li>
+
+      <li class="listItem">
+        <div class="showcaseLabel">
+          <img src="img/sensor.jpeg" alt="sensor">
         </div>
         <div class="description">
           <h6>FUTURE OF WORK</h6>
@@ -320,7 +320,7 @@
     </div>
     <div class="showcaseSubbrandsList">
       <div class="showcaseSubbrandsArtical">
-        <img src="/img/drones.jpg" alt="drones">
+        <img src="img/drones.jpg" alt="drones">
         <small>
           <p>FUTURE OF WORK</p>
         </small>
@@ -332,7 +332,7 @@
       <ol class="contentList">
         <li class="listArticle">
           <figure>
-            <img src="/img/join.webp" class="technology-img" alt="join">
+            <img src="img/join.webp" class="technology-img" alt="join">
           </figure>
           <div class="listArticleDescription">
             <small>
@@ -343,7 +343,7 @@
         </li>
         <li class="listArticle">
           <figure>
-            <img src="/img/sensor.jpeg" class="technology-img" alt="sensor">
+            <img src="img/sensor.jpeg" class="technology-img" alt="sensor">
           </figure>
           <div class="listArticleDescription">
             <small>
@@ -354,7 +354,7 @@
         </li>
         <li class="listArticle">
           <figure>
-            <img src="/img/ukrain.jpeg" class="technology-img" alt="ukrain">
+            <img src="img/ukrain.jpeg" class="technology-img" alt="ukrain">
           </figure>
           <div class="listArticleDescription">
             <small>
@@ -365,7 +365,7 @@
         </li>
         <li class="listArticle">
           <figure>
-            <img src="/img/valencia.jpg" class="technology-img" alt="valencia">
+            <img src="img/valencia.jpg" class="technology-img" alt="valencia">
           </figure>
           <div class="listArticleDescription">
             <small>
@@ -458,26 +458,26 @@
       </div>
       <div class="getInTouchIcon">
         <figure>
-          <img src="/img/media.svg" alt="media">
+          <img src="img/media.svg" alt="media">
         </figure>
           <p> Media</p>
     </div>
     <div class="getInTouchIcon">
       <figure>
-        <img src="/img/events.svg" alt="events">
+        <img src="img/events.svg" alt="events">
       </figure>
         <p>Events</p>
   </div>
   <div class="getInTouchIcon">
     <figure>
-      <img src="/img/spaces.svg" alt="spaces">
+      <img src="img/spaces.svg" alt="spaces">
     </figure>
       <p>Spaces</p>
 
 </div>
 <div class="getInTouchIcon">
   <figure>
-    <img src="/img/programs.svg" alt="programs">
+    <img src="img/programs.svg" alt="programs">
   </figure>
     <p>Programs</p>
 
