--- a/HTML-CSS/week03/index.html
+++ b/HTML-CSS/week03/index.html
@@ -106,7 +106,7 @@
       <ul class="second-grid">
         <li class="listItem">
           <div class="clipImg">
-            <img src="/img/drones.jpg" class="second-img" alt="drones">
+            <img src="img/drones.jpg" class="second-img" alt="drones">
             <div class="index">1</div>
           </div>
           <div class="description">
@@ -115,7 +115,7 @@
         </li>
         <li class="listItem">
           <div class="clipImg">
-            <img src="/img/valencia.jpg" class="second-img" alt="valencia">
+            <img src="img/valencia.jpg" class="second-img" alt="valencia">
             <div class="index">2</div>
           </div>
           <div class="description">
@@ -126,7 +126,7 @@
         </li>
         <li class="listItem">
           <div class="clipImg">
-            <img src="/img/sensor.jpeg" class="second-img" alt="sensor">
+            <img src="img/sensor.jpeg" class="second-img" alt="sensor">
             <div class="index">3</div>
           </div>
           <div class="description">
@@ -138,7 +138,7 @@
         </li>
         <li class="listItem">
           <div class="clipImg">
-            <img src="/img/ukrain.jpeg" class="second-img" alt="ukrain">
+            <img src="img/ukrain.jpeg" class="second-img" alt="ukrain">
             <div class="index">4</div>
           </div>
           <div class="description">
@@ -149,7 +149,7 @@
         </li>
         <li class="listItem">
           <div class="clipImg">
-            <img src="/img/drones.jpg" class="second-img" alt="drones">
+            <img src="img/drones.jpg" class="second-img" alt="drones">
             <div class="index">5</div>
           </div>
           <div class="description">
@@ -170,7 +170,7 @@
       <ul class="third-grid">
         <li class="listItem">
           <div class="showcaseLabel">
-            <img src="/img/valencia.jpg" alt="valencia">
+            <img src="img/valencia.jpg" alt="valencia">
           </div>
           <div class="description">
             <h6>FUTURE OF WORK</h6>
@@ -179,17 +179,7 @@
         </li>
         <li class="listItem">
           <div class="showcaseLabel">
-            <img src="/img/drones.jpg" alt="drones">
-          </div>
-          <div class="description">
-            <h6>FUTURE OF WORK</h6>
-            <h4>Will non-linear work days be the new hybrid working?</h4>
-          </div>
-        </li>
-
-        <li class="listItem">
-          <div class="showcaseLabel">
-            <img src="/img/ukrain.jpeg" alt="ukrain">
+            <img src="img/drones.jpg" alt="drones">
           </div>
           <div class="description">
             <h6>FUTURE OF WORK</h6>
@@ -199,7 +189,7 @@
 
         <li class="listItem">
           <div class="showcaseLabel">
-            <img src="/img/sensor.jpeg" alt="sensor">
+            <img src="img/ukrain.jpeg" alt="ukrain">
           </div>
           <div class="description">
             <h6>FUTURE OF WORK</h6>
@@ -209,7 +199,7 @@
 
         <li class="listItem">
           <div class="showcaseLabel">
-            <img src="/img/sensor.jpeg" alt="sensor">
+            <img src="img/sensor.jpeg" alt="sensor">
           </div>
           <div class="description">
             <h6>FUTURE OF WORK</h6>
@@ -219,7 +209,7 @@
 
         <li class="listItem">
           <div class="showcaseLabel">
-            <img src="/img/drones.jpg" alt="drones">
+            <img src="img/sensor.jpeg" alt="sensor">
           </div>
           <div class="description">
             <h6>FUTURE OF WORK</h6>
@@ -229,7 +219,7 @@
 
         <li class="listItem">
           <div class="showcaseLabel">
-            <img src="/img/sensor.jpeg" alt="sensor">
+            <img src="img/drones.jpg" alt="drones">
           </div>
           <div class="description">
             <h6>FUTURE OF WORK</h6>
@@ -239,7 +229,7 @@
 
         <li class="listItem">
           <div class="showcaseLabel">
-            <img src="/img/valencia.jpg" alt="valencia">
+            <img src="img/sensor.jpeg" alt="sensor">
           </div>
           <div class="description">
             <h6>FUTURE OF WORK</h6>
@@ -249,7 +239,7 @@
 
         <li class="listItem">
           <div class="showcaseLabel">
-            <img src="/img/ukrain.jpeg" alt="ukrain">
+            <img src="img/valencia.jpg" alt="valencia">
           </div>
           <div class="description">
             <h6>FUTURE OF WORK</h6>
@@ -259,7 +249,7 @@
 
         <li class="listItem">
           <div class="showcaseLabel">
-            <img src="/img/sensor.jpeg" alt="sensor">
+            <img src="img/ukrain.jpeg" alt="ukrain">
           </div>
           <div class="description">
             <h6>FUTURE OF WORK</h6>
@@ -269,7 +259,7 @@
 
         <li class="listItem">
           <div class="showcaseLabel">
-            <img src="/img/drones.jpg" alt="drones">
+            <img src="img/sensor.jpeg" alt="sensor">
           </div>
           <div class="description">
             <h6>FUTURE OF WORK</h6>
@@ -279,7 +269,17 @@
 
         <li class="listItem">
           <div class="showcaseLabel">
-            <img src="/img/sensor.jpeg" alt="sensor">
+            <img src="img/drones.jpg" alt="drones">
+          </div>
+          <div class="description">
+            <h6>FUTURE OF WORK</h6>
+            <h4>Will non-linear work days be the new hybrid working?</h4>
+          </div>
+        </li>
+
+        <li class="listItem">
+          <div class="showcaseLabel">
+            <img src="img/sensor.jpeg" alt="sensor">
           </div>
           <div class="description">
             <h6>FUTURE OF WORK</h6>
@@ -320,7 +320,7 @@
       <div class="showcaseSubbrandsList">
         <div class="showcaseSubbrandsArtical">
           <h2 class="showcaseHeader">Startups and technology</h2>
-          <img src="/img/drones.jpg" alt="drones">
+          <img src="img/drones.jpg" alt="drones">
 
           <small>
             <p>FUTURE OF WORK</p>
@@ -333,7 +333,7 @@
         <ol class="showcasetList">
           <li class="listArticle">
             <figure>
-              <img src="/img/join.webp" class="technology-img" alt="join">
+              <img src="img/join.webp" class="technology-img" alt="join">
             </figure>
             <div class="listArticleDescription">
               <small>
@@ -344,7 +344,7 @@
           </li>
           <li class="listArticle">
             <figure>
-              <img src="/img/sensor.jpeg" class="technology-img" alt="sensor">
+              <img src="img/sensor.jpeg" class="technology-img" alt="sensor">
             </figure>
             <div class="listArticleDescription">
               <small>
@@ -355,7 +355,7 @@
           </li>
           <li class="listArticle">
             <figure>
-              <img src="/img/ukrain.jpeg" class="technology-img" alt="ukrain">
+              <img src="img/ukrain.jpeg" class="technology-img" alt="ukrain">
             </figure>
             <div class="listArticleDescription">
               <small>
@@ -366,7 +366,7 @@
           </li>
           <li class="listArticle">
             <figure>
-              <img src="/img/valencia.jpg" class="technology-img" alt="valencia">
+              <img src="img/valencia.jpg" class="technology-img" alt="valencia">
             </figure>
             <div class="listArticleDescription">
               <small>
@@ -458,19 +458,19 @@
       </div>
       <div class="getInTouchIcon">
         <figure>
-          <img src="/img/media.svg" alt="media">
+          <img src="img/media.svg" alt="media">
         </figure>
         <p> Media</p>
         <figure>
-          <img src="/img/events.svg" alt="events">
+          <img src="img/events.svg" alt="events">
         </figure>
         <p>Events</p>
         <figure>
-          <img src="/img/spaces.svg" alt="spaces">
+          <img src="img/spaces.svg" alt="spaces">
         </figure>
         <p>Spaces</p>
         <figure>
-          <img src="/img/programs.svg" alt="programs">
+          <img src="img/programs.svg" alt="programs">
         </figure>
         <p>Programs</p>
       </div>
