--- a/HTML-CSS/week03/index.html
+++ b/HTML-CSS/week03/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <!-- ***********navigation************ -->
+
 
   <nav class="navigation">
     <div class="first-nav">
@@ -48,7 +48,7 @@
     </div>
   </nav>
 
-  <!-- ***********link************ -->
+
 
   <div class="navMessage">
     <a href="https://thenextweb.com/valencia?utm_source=TNW+Website&utm_medium=TNW+website+notification&utm_campaign=Cross+Site+Notification&utm_content=VLC+main+page"
@@ -57,7 +57,7 @@
   </div>
   </a>
 
-  <!-- ***********first-grid************ -->
+ 
 
   <main>
     <section class="important-news">
@@ -66,7 +66,7 @@
         <article class="sensor">
           <div class="topic-news">
             <h6>Deep tech</h6>
-            <h4 class="">New sensor promises to bring ‘true colour’ to smartphone photos</a></h4>
+            <h4 class="big-title">New sensor promises to bring ‘true colour’ to smartphone photos</a></h4>
           </div>
         </article>
         <article class="ukraine">
@@ -85,7 +85,7 @@
         <article class="valencia">
           <div class="topic-news">
             <h6>Ecosystems</h6>
-            <h4>València’sfirst unicorn founder wants to build a global hub for impact tech</h4>
+            <h4 class="big-title">València’sfirst unicorn founder wants to build a global hub for impact tech</h4>
           </div>
         </article>
         <article class="drones">
@@ -97,7 +97,7 @@
       </div>
     </section>
 
-    <!-- ***********second-grid************ -->
+
 
     <section class="popular-story">
       <div>
@@ -110,7 +110,7 @@
             <div class="index">1</div>
           </div>
           <div class="description">
-            <h4>Are bioinspired drones the next big thing in unmanned flight?</h4>
+            <h4 >Are bioinspired drones the next big thing in unmanned flight?</h4>
           </div>
         </li>
         <li class="listItem">
@@ -119,7 +119,7 @@
             <div class="index">2</div>
           </div>
           <div class="description">
-            <h4>
+            <h4 >
               New sensor promises to bring ‘true colour’ to smartphone photos
             </h4>
           </div>
@@ -161,7 +161,6 @@
       </ul>
     </section>
 
-    <!-- ***********third-grid************ -->
 
     <section class="latest-news">
       <div>
@@ -314,7 +313,7 @@
       </div>
     </section>
 
-    <!-- ********technology********* -->
+  
 
     <section class="showcase">
       <div class="showcaseSubbrandsList">
@@ -379,7 +378,6 @@
       </div>
     </section>
 
-    <!-- ********video********* -->
 
     <section class="video">
       <div class="videoArtical">
@@ -447,7 +445,7 @@
       </ol>
     </section>
 
-    <!-- ********get in touch********* -->
+
     <section class="getInTouch">
       <div class="getInTouchArtical">
         <h2>Work with us</h2>
